--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,1 @@
-# Fucking gitignore izdzēsa visis bin un dll opengl un sdl failus, nošaujies
+# Fucking gitignore izdzēsa visus bin un dll opengl un sdl failus, nošaujies
